@@ -8,9 +8,10 @@ Changes - List of significant changes to Devel::NYTProf
 
 =head2 Changes in Devel::NYTProf 4.06 (svn XXX) XXX
 
+  Improved handling of Class::MOP/Moose generated methods.
   Added note to the docs re profiling applications that use Coro.
   Clarified usecputime=1 docs.
-  Updates tests for new functionality in Sub::Name 0.06.
+  Updated tests for new functionality in Sub::Name 0.06.
 
 =head2 Changes in Devel::NYTProf 4.05 (svn 1359) 15th Sept 2010
 
